# FriendlyScriptDoctor

./: README.md  falcon-7b-instruct_memory.ipynb  pyproject.toml
